RESOLVED FIXED308541
[CoordinatedGraphics] Handle buffer creation failures gracefully
https://bugs.webkit.org/show_bug.cgi?id=308541
Summary [CoordinatedGraphics] Handle buffer creation failures gracefully
Pawel Lampe
Reported 2026-02-24 03:36:20 PST
When swap chain fails to create buffers, currently it stores nullptr render targets and hence breaks assumptions in few places. The above leads to crashes when headless WPE platform is used with EGLImage buffers and when DRM device is guessed wrong.
Attachments
Pawel Lampe
Comment 1 2026-02-24 03:41:15 PST
EWS
Comment 2 2026-02-24 23:22:56 PST
Committed 308187@main (bfe2e92b68fb): <https://commits.webkit.org/308187@main> Reviewed commits have been landed. Closing PR #59318 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.