[CoordinatedGraphics] Handle buffer creation failures gracefully https://bugs.webkit.org/show_bug.cgi?id=308541

Reviewed by Carlos Garcia Campos.

When swap chain fails to create buffers, currently it stores nullptr
render targets and hence breaks assumptions in few places.
The above leads to crashes when headless WPE platform is used with
EGLImage buffers and when DRM device is guessed wrong.

This change implements graceful handling of such buffer creation
failures and also adjusts the wrong assumption in one spot.

Canonical link: https://commits.webkit.org/308187@main